--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test",
   "main": "index.js",
   "scripts": {
-    "start": "node index",echo "node_modules" > .gitignore
+    "start": "node index",
     "test": "mocha"
   },
   "author": "",
